--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,8 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
+
 .iframecontainer {
 	position: relative;
 	overflow: hidden;
@@ -132,7 +134,12 @@ input, select, textarea {
 			-ms-transition: none !important;
 			transition: none !important;
 		}
-
+	#projecttextbottom {
+		margin-bottom: 60px;
+	}
+	#project {
+		overflow: hidden;
+	}
 /* Type */
 
 	body {
